--- a/src/styles.css
+++ b/src/styles.css
@@ -13,9 +13,9 @@
 html {
   color-scheme: light dark;
 }
-* {
+/* * {
   @apply border-gray-200 dark:border-gray-800;
 }
 body {
   @apply bg-gray-50 text-gray-950 dark:bg-gray-900 dark:text-gray-200;
-}
+} */
